--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libopencm3"]
-	path = Software/Try01/
+[submodule "Software/Try01/libopencm3"]
+	path = Software/Try01/libopencm3
 	url = https://github.com/libopencm3/libopencm3
