generate hex, srec and listing via makefile targets.

--- a/Software/Try01/my-project/Makefile
+++ b/Software/Try01/my-project/Makefile
@@ -17,4 +17,5 @@ OPENCM3_DIR=../libopencm3
 
 include $(OPENCM3_DIR)/mk/genlink-config.mk
 include ../rules.mk
+include $(OPENCM3_DIR)/mk/gcc-rules.mk
 include $(OPENCM3_DIR)/mk/genlink-rules.mk
