--- a/Software/Try01/my-project/Makefile
+++ b/Software/Try01/my-project/Makefile
@@ -8,7 +8,7 @@ AFILES += api-asm.S
 
 # TODO - you will need to edit these two lines!
 DEVICE=stm32f401ret6
-OOCD_FILE = board/stm32f4discovery.cfg
+OOCD_FILE = board/st_nucleo_f4.cfg
 
 # You shouldn't have to edit anything below here.
 VPATH += $(SHARED_DIR)
