added CMake project example

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Software/Try01/libopencm3"]
 	path = Software/Try01/libopencm3
 	url = https://github.com/libopencm3/libopencm3
+[submodule "Software/Try02CMake/libopencm3"]
+	path = Software/Try02CMake/libopencm3
+	url = https://github.com/libopencm3/libopencm3
