CMake macros for size and objcopy

--- a/Software/Try02CMake/blinky/CMakeLists.txt
+++ b/Software/Try02CMake/blinky/CMakeLists.txt
@@ -5,15 +5,41 @@ message(STATUS "Configuring project ${PROJECT_NAME}")
 project(${PROJECT_NAME} C ASM)
 cmake_minimum_required(VERSION 3.1)
 
+macro(do_size size_target)	
+	add_custom_command(TARGET ${size_target}.elf POST_BUILD
+		COMMAND ${SIZE} --format=berkeley "$<TARGET_FILE:${size_target}.elf>"
+		COMMENT "Invoking: Cross ARM GNU Print Size")
+endmacro(do_size)	
+
+macro(do_objcopy objcopy_target type)
+	set(do_objcopy_cmd binary)
+	set(do_objcopy_ext bin)
+
+	if("${type}" STREQUAL "srec")
+		set(do_objcopy_cmd srec)
+		set(do_objcopy_ext srec)
+	endif()
+
+	if("${type}" STREQUAL "hex")
+		set(do_objcopy_cmd ihex)
+		set(do_objcopy_ext hex)
+	endif()
+
+	add_custom_target(${objcopy_target}.${do_objcopy_ext} ALL
+		${OBJCOPY} -O${do_objcopy_cmd} ${objcopy_target}.elf ${objcopy_target}.${do_objcopy_ext}
+		DEPENDS ${objcopy_target}.elf
+		COMMENT "Invoking: Cross ARM GNU OBJCOPY ${objcopy_target} to ${do_objcopy_cmd}")
+endmacro(do_objcopy)	
+
+
 set(LIBOPENCM3_DIR ${CMAKE_SOURCE_DIR}/../libopencm3)
 
 set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 
-# -Werror \
-
 #set(STM32F4_FLAGS "-mcpu=cortex-m3 -mthumb -msoft-float")
 set(STM32F4_FLAGS "-mcpu=cortex-m4 -mthumb -mfloat-abi=hard")
-set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-std=c11 \
+set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "\
+-std=c11 \
 -Os \
 -Wall \
 -Wextra \
@@ -28,10 +54,10 @@ set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-std=c11 \
 -fdata-sections \
 -Wno-packed-bitfield-compat \
 ${STM32F4_FLAGS}")
+# -Werror \
 
 SET(CMAKE_ASM_FLAGS ${CMAKE_ASM_FLAGS} "${CMAKE_C_FLAGS} -x assembler-with-cpp")
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_C_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
 -T ${CMAKE_CURRENT_SOURCE_DIR}/generated.stm32f401ret6.ld \
 -MD \
@@ -39,12 +65,14 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
 -g3 \
 -ggdb3 \
 -nostartfiles \
--msoft-float \
+-mhard-float \
 -lc \
 -lgcc \
 -lnosys \
 -Wl,--gc-sections")
 
+
+# Source files for main target.
 set(SOURCES
     main.c
     common_lib/utils.c
@@ -55,7 +83,6 @@ set(SOURCES
 
 
 add_definitions(-DSTM32F4)
-
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}../my-common-code
@@ -64,17 +91,14 @@ include_directories(
 
 add_custom_target(libopencm3 make WORKING_DIRECTORY ${LIBOPENCM3_DIR})
 link_directories(${LIBOPENCM3_DIR}/lib)
-
 add_executable(${CMAKE_PROJECT_NAME}.elf ${SOURCES})
+target_link_libraries(${CMAKE_PROJECT_NAME}.elf opencm3_stm32f4)
+do_objcopy(${CMAKE_PROJECT_NAME} bin)
+do_objcopy(${CMAKE_PROJECT_NAME} srec)
+do_objcopy(${CMAKE_PROJECT_NAME} hex)
+do_size(${CMAKE_PROJECT_NAME})
 
-target_link_libraries(${CMAKE_PROJECT_NAME}.elf
-    opencm3_stm32f4)
-
-add_custom_target(${CMAKE_PROJECT_NAME}.bin ALL
-    ${OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin
-    DEPENDS ${CMAKE_PROJECT_NAME}.elf)
-
-
+		
 add_custom_target(upload
     stat -c %s ${CMAKE_PROJECT_NAME}.bin &&
     /home/ppkt/usr/bin/st-flash --reset write ${CMAKE_PROJECT_NAME}.bin 0x08000000
