what a mess ... got rdimon.specs for semihosting as a default. added printf retargetting

--- a/Software/Try02CMake/blinky/CMakeLists.txt
+++ b/Software/Try02CMake/blinky/CMakeLists.txt
@@ -5,31 +5,31 @@ message(STATUS "Configuring project ${PROJECT_NAME}")
 project(${PROJECT_NAME} C ASM)
 cmake_minimum_required(VERSION 3.1)
 
-macro(do_size size_target)	
-	add_custom_command(TARGET ${size_target}.elf POST_BUILD
-		COMMAND ${SIZE} --format=berkeley "$<TARGET_FILE:${size_target}.elf>"
-		COMMENT "Invoking: Cross ARM GNU Print Size")
-endmacro(do_size)	
+macro(do_size size_target)
+    add_custom_command(TARGET ${size_target}.elf POST_BUILD
+            COMMAND ${SIZE} --format=berkeley "$<TARGET_FILE:${size_target}.elf>"
+            COMMENT "Invoking: Cross ARM GNU Print Size")
+endmacro(do_size)
 
 macro(do_objcopy objcopy_target type)
-	set(do_objcopy_cmd binary)
-	set(do_objcopy_ext bin)
+    set(do_objcopy_cmd binary)
+    set(do_objcopy_ext bin)
 
-	if("${type}" STREQUAL "srec")
-		set(do_objcopy_cmd srec)
-		set(do_objcopy_ext srec)
-	endif()
+    if ("${type}" STREQUAL "srec")
+        set(do_objcopy_cmd srec)
+        set(do_objcopy_ext srec)
+    endif ()
 
-	if("${type}" STREQUAL "hex")
-		set(do_objcopy_cmd ihex)
-		set(do_objcopy_ext hex)
-	endif()
+    if ("${type}" STREQUAL "hex")
+        set(do_objcopy_cmd ihex)
+        set(do_objcopy_ext hex)
+    endif ()
 
-	add_custom_target(${objcopy_target}.${do_objcopy_ext} ALL
-		${OBJCOPY} -O${do_objcopy_cmd} ${objcopy_target}.elf ${objcopy_target}.${do_objcopy_ext}
-		DEPENDS ${objcopy_target}.elf
-		COMMENT "Invoking: Cross ARM GNU OBJCOPY ${objcopy_target} to ${do_objcopy_cmd}")
-endmacro(do_objcopy)	
+    add_custom_target(${objcopy_target}.${do_objcopy_ext} ALL
+            ${OBJCOPY} -O${do_objcopy_cmd} ${objcopy_target}.elf ${objcopy_target}.${do_objcopy_ext}
+            DEPENDS ${objcopy_target}.elf
+            COMMENT "Invoking: Cross ARM GNU OBJCOPY ${objcopy_target} to ${do_objcopy_cmd}")
+endmacro(do_objcopy)
 
 
 set(LIBOPENCM3_DIR ${CMAKE_SOURCE_DIR}/../libopencm3)
@@ -38,6 +38,7 @@ set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 
 #set(STM32F4_FLAGS "-mcpu=cortex-m3 -mthumb -msoft-float")
 set(STM32F4_FLAGS "-mcpu=cortex-m4 -mthumb -mfloat-abi=hard")
+#[[
 set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "\
 -std=c11 \
 -Os \
@@ -54,10 +55,22 @@ set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "\
 -fdata-sections \
 -Wno-packed-bitfield-compat \
 ${STM32F4_FLAGS}")
+]]
 # -Werror \
+
+set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "\
+-O0 -std=c99 -ggdb3 \
+-mfpu=fpv4-sp-d16 \
+-fno-common -ffunction-sections -fdata-sections \
+-Wextra -Wshadow -Wno-unused-variable -Wimplicit-function-declaration -Wredundant-decls -Wstrict-prototypes -Wmissing-prototypes \
+-MD -Wall -Wundef \
+ ${STM32F4_FLAGS}")
+#-DSTM32F4 -DSTM32F401RET6
+
 
 SET(CMAKE_ASM_FLAGS ${CMAKE_ASM_FLAGS} "${CMAKE_C_FLAGS} -x assembler-with-cpp")
 
+#[[
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
 -T ${CMAKE_CURRENT_SOURCE_DIR}/generated.stm32f401ret6.ld \
 -MD \
@@ -70,23 +83,40 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
 -lgcc \
 -lnosys \
 -Wl,--gc-sections")
+]]
 
+message( "CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
+-T ${CMAKE_CURRENT_SOURCE_DIR}/generated.stm32f401ret6.ld \
+-nostartfiles -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 \
+-Wl,--gc-sections \
+-Wl,--start-group \
+-lc -lgcc \
+-lnosys \
+-specs=nosys.specs \
+-Wl,--end-group")
+#
+#-lnosys \
+#-specs=nano.specs \
+# -lc -lgcc \
+# semihosting:
+# -specs=rdimon.specs -lrdimon \
 
 # Source files for main target.
 set(SOURCES
-    main.c
-    common_lib/utils.c
-	../my-common-code/api.c
-	../my-common-code/api-asm.S
-    )
+        main.c
+        common_lib/utils.c
+        ../my-common-code/api.c
+        ../my-common-code/api-asm.S
+        ../my-common-code/uartprint.c)
 #set_source_files_properties(../my-common-code/api-asm.S PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp")
 
 
-add_definitions(-DSTM32F4)
+add_definitions(-DSTM32F4 -DSTM32F401RET6)
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}../my-common-code
-    ${LIBOPENCM3_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}../my-common-code
+        ${LIBOPENCM3_DIR}/include
 )
 
 add_custom_target(libopencm3 make WORKING_DIRECTORY ${LIBOPENCM3_DIR})
@@ -102,24 +132,23 @@ do_size(${CMAKE_PROJECT_NAME})
 set(OOCD openocd)
 set(OOCD_FILE board/st_nucleo_f4.cfg)
 add_custom_target(flash
-    ${OOCD} -f ${OOCD_FILE} -c "program ${CMAKE_PROJECT_NAME}.elf verify reset exit"
-    DEPENDS ${CMAKE_PROJECT_NAME}.elf
-	COMMENT "Invoking: OpenOCD flash with ${CMAKE_PROJECT_NAME}.elf")
+        ${OOCD} -f ${OOCD_FILE} -c "program ${CMAKE_PROJECT_NAME}.elf verify reset exit"
+        DEPENDS ${CMAKE_PROJECT_NAME}.elf
+        COMMENT "Invoking: OpenOCD flash with ${CMAKE_PROJECT_NAME}.elf")
 
 set(PYTHON "C:/Python/Python37/python")
 set(PORT COM17)
 set(BAUDRATE 115200)
 add_custom_target(monitor
-    ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
-	COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
+        ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
+        COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
 add_custom_target(fmonitor
-    ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
-    DEPENDS flash
-	COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
+        ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
+        DEPENDS flash
+        COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
 
-	
-		
+
 add_custom_target(upload
-    stat -c %s ${CMAKE_PROJECT_NAME}.bin &&
-    /home/ppkt/usr/bin/st-flash --reset write ${CMAKE_PROJECT_NAME}.bin 0x08000000
-    DEPENDS ${CMAKE_PROJECT_NAME}.bin)
+        stat -c %s ${CMAKE_PROJECT_NAME}.bin &&
+        /home/ppkt/usr/bin/st-flash --reset write ${CMAKE_PROJECT_NAME}.bin 0x08000000
+        DEPENDS ${CMAKE_PROJECT_NAME}.bin)
