--- a/Software/Try02CMake/blinky/CMakeLists.txt
+++ b/Software/Try02CMake/blinky/CMakeLists.txt
@@ -107,12 +107,12 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
 set(SOURCES
         main.c
 #        common_lib/utils.c
-        ../my-common-code/api.c
-        ../my-common-code/api-asm.S
-        ../my-common-code/uartprint.c
-        ../my-common-code/clock.c
-        ../my-common-code/DS1307.c)
-#set_source_files_properties(../my-common-code/api-asm.S PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp")
+        ../common-code/api.c
+        ../common-code/api-asm.S
+        ../common-code/uartprint.c
+        ../common-code/clock.c
+        ../common-code/DS1307.c)
+#set_source_files_properties(../common-code/api-asm.S PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp")
 
 
 add_definitions(-DSTM32F4 -DSTM32F401RET6)
