--- a/Software/Try03PlatformIO/platformio.ini
+++ b/Software/Try03PlatformIO/platformio.ini
@@ -13,5 +13,8 @@ platform = ststm32
 framework = mbed
 board = nucleo_f401re
 ;build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+; see https://bintray.com/platformio/dl-packages/toolchain-gccarmnoneeabi
+platform_packages = toolchain-gccarmnoneeabi@>1.80201.190213
+build_flags = -std=c++2a
 lib_deps =
      Adafruit_RTCLib
