--- a/Software/Try03PlatformIO/platformio.ini
+++ b/Software/Try03PlatformIO/platformio.ini
@@ -12,6 +12,7 @@
 platform = ststm32
 framework = mbed
 board = nucleo_f401re
+;board = bluepill_f103c8_128k
 ;build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ; see https://bintray.com/platformio/dl-packages/toolchain-gccarmnoneeabi
 platform_packages = toolchain-gccarmnoneeabi@>1.80201.190213
