--- a/Software/Try03PlatformIO/platformio.ini
+++ b/Software/Try03PlatformIO/platformio.ini
@@ -16,7 +16,8 @@ board = nucleo_f401re
 ;build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ; see https://bintray.com/platformio/dl-packages/toolchain-gccarmnoneeabi
 platform_packages = toolchain-gccarmnoneeabi@>1.80201.190213
-build_flags = -std=c++17 -Os -D PIO_FRAMEWORK_MBED_RTOS_PRESENT -D PIO_FRAMEWORK_MBED_EVENTS_PRESENT -D PIO_FRAMEWORK_MBED_FILESYSTEM_PRESENT
+build_flags = -std=c++17 -Os -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+;build_flags = -std=c++17 -Os -D PIO_FRAMEWORK_MBED_RTOS_PRESENT -D PIO_FRAMEWORK_MBED_EVENTS_PRESENT -D PIO_FRAMEWORK_MBED_FILESYSTEM_PRESENT
 ; -flto
 extra_scripts = config/linker_flags_newlib-nano.py
 lib_deps =
