finally, this works. REMEMBER the hack: added         join(FRAMEWORK_DIR, "components/storage/blockdevice/COMPONENT_SD"), to D:\Users\Jedzia.pubsiX\.platformio\packages\framework-mbed\platformio\platformio-build.py

--- a/Software/Try03PlatformIO/platformio.ini
+++ b/Software/Try03PlatformIO/platformio.ini
@@ -19,6 +19,6 @@ platform_packages = toolchain-gccarmnoneeabi@>1.80201.190213
 build_flags = -std=c++17 -Os -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ;build_flags = -std=c++17 -Os -D PIO_FRAMEWORK_MBED_RTOS_PRESENT -D PIO_FRAMEWORK_MBED_EVENTS_PRESENT -D PIO_FRAMEWORK_MBED_FILESYSTEM_PRESENT
 ; -flto
-extra_scripts = config/linker_flags_newlib-nano.py
+;extra_scripts = config/linker_flags_newlib-nano.py
 lib_deps =
      Adafruit_RTCLib
