--- a/Software/Try03PlatformIO/mbed_app.json
+++ b/Software/Try03PlatformIO/mbed_app.json
@@ -1,32 +1,7 @@
 {
-  "config": {
-    "target_overrides": {
-      "NUCLEO_F401RE": {
-        "components": ["SD"],
-        "features_add": ["STORAGE"]
-      },
-      "*": {
-        "target.features_add": [
-          "STORAGE"
-        ],
-        "target.components_add": [
-          "SD"
-        ],
-        "platform.stdio-baud-rate": 115200,
-        "target.stdio_uart_tx": "PA_2",
-        "target.stdio_uart_rx": "PA_3"
-      }
-    },
-    "NUCLEO_F401RE": {
-      "target.features_add": [
-        "STORAGE"
-      ],
-      "target.components_add": [
-        "SD"
-      ],
-      "platform.stdio-baud-rate": 115200,
-      "target.stdio_uart_tx": "PA_2",
-      "target.stdio_uart_rx": "PA_3"
+  "target_overrides": {
+    "*": {
+      "target.components_add": ["SD"]
     }
   }
 }
