--- a/Software/Try02CMakeCpp/blinkyCpp/CMakeLists.txt
+++ b/Software/Try02CMakeCpp/blinkyCpp/CMakeLists.txt
@@ -21,36 +21,7 @@ if (EXISTS ${CMAKE_SOURCE_DIR}/local.cmake)
     include(${CMAKE_SOURCE_DIR}/local.cmake)
 endif ()
 
-macro(do_size size_target)
-    add_custom_command(TARGET ${size_target}.elf POST_BUILD
-            COMMAND ${SIZE} --format=berkeley "$<TARGET_FILE:${size_target}.elf>"
-            COMMENT "Invoking: Cross ARM GNU Print Size")
-endmacro(do_size)
-
-macro(do_objcopy objcopy_target type)
-    set(do_objcopy_cmd binary)
-    set(do_objcopy_ext bin)
-
-    if ("${type}" STREQUAL "srec")
-        set(do_objcopy_cmd srec)
-        set(do_objcopy_ext srec)
-    endif ()
-
-    if ("${type}" STREQUAL "hex")
-        set(do_objcopy_cmd ihex)
-        set(do_objcopy_ext hex)
-    endif ()
-
-    add_custom_target(${objcopy_target}.${do_objcopy_ext} ALL
-            ${OBJCOPY} -O${do_objcopy_cmd} ${objcopy_target}.elf ${objcopy_target}.${do_objcopy_ext}
-            DEPENDS ${objcopy_target}.elf
-            COMMENT "Invoking: Cross ARM GNU OBJCOPY ${objcopy_target} to ${do_objcopy_cmd}")
-    #add_custom_command(TARGET ${objcopy_target}.elf
-    #        COMMAND ${OBJCOPY} -O${do_objcopy_cmd} ${objcopy_target}.elf ${objcopy_target}.${do_objcopy_ext}
-    #        DEPENDS ${objcopy_target}.elf
-    #        COMMENT "Invoking: Cross ARM GNU OBJCOPY ${objcopy_target} to ${do_objcopy_cmd}")
-endmacro(do_objcopy)
-
+include(../CMake/Arm.cmake)
 
 set(LIBOPENCM3_DIR ${CMAKE_SOURCE_DIR}/../libopencm3)
 
@@ -173,56 +144,7 @@ do_objcopy(${CMAKE_PROJECT_NAME} srec)
 do_objcopy(${CMAKE_PROJECT_NAME} hex)
 do_size(${CMAKE_PROJECT_NAME})
 
-add_custom_target(flash
-        ${OOCD} -f ${OOCD_FILE} -c "program ${CMAKE_PROJECT_NAME}.elf verify reset exit"
-        DEPENDS ${CMAKE_PROJECT_NAME}.elf
-        COMMENT "Invoking: OpenOCD flash with ${CMAKE_PROJECT_NAME}.elf")
-
-add_custom_target(monitor # Start serial monitor.
-        ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
-        COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
-add_custom_target(fmonitor # Flash target and start serial monitor.
-        ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
-        DEPENDS flash
-        COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
-
-
-add_custom_target(upload # Flash target via 'st-flash'.
-        stat -c %s ${CMAKE_PROJECT_NAME}.bin &&
-        ${STFLASH} --reset write ${CMAKE_PROJECT_NAME}.bin 0x08000000
-        DEPENDS ${CMAKE_PROJECT_NAME}.bin)
-
-# >qemu-system-gnuarmeclipse.exe -board help
-#
-# Supported boards:
-# Maple                LeafLab Arduino-style STM32 microcontroller board (r5)
-# NUCLEO-F072RB        ST Nucleo Development Board for STM32 F072 devices
-# NUCLEO-F103RB        ST Nucleo Development Board for STM32 F1 series
-# NUCLEO-F411RE        ST Nucleo Development Board for STM32 F4 series
-# NetduinoGo           Netduino GoBus Development Board with STM32F4
-# NetduinoPlus2        Netduino Development Board with STM32F4
-# OLIMEXINO-STM32      Olimex Maple (Arduino-like) Development Board
-# STM32-E407           Olimex Development Board for STM32F407ZGT6
-# STM32-H103           Olimex Header Board for STM32F103RBT6
-# STM32-P103           Olimex Prototype Board for STM32F103RBT6
-# STM32-P107           Olimex Prototype Board for STM32F107VCT6
-# STM32F0-Discovery    ST Discovery kit for STM32F051 line
-# STM32F4-Discovery    ST Discovery kit for STM32F407/417 lines
-# STM32F429I-Discovery ST Discovery kit for STM32F429/439 lines
-# generic              Generic Cortex-M board; use -mcu to define the device
-#
-# >qemu-system-gnuarmeclipse.exe -mcu help
-#
-# Supported MCUs:
-# STM32F051R8
-# STM32F072RB
-# STM32F103RB
-# STM32F107VC
-# STM32F405RG
-# STM32F407VG
-# STM32F407ZG
-# STM32F411RE
-# STM32F429ZI
-add_custom_target(emu # emulation with QEMU-Arm.
-        ${QEMU} --verbose --verbose --board NUCLEO-F411RE --mcu STM32F411RE -d unimp,guest_errors --image ${CMAKE_PROJECT_NAME}.elf
-        DEPENDS ${CMAKE_PROJECT_NAME}.bin)
+add_flash_target(${CMAKE_PROJECT_NAME})
+add_monitor_targets()
+add_inspection_targets(${CMAKE_PROJECT_NAME})
+add_emulation_target(${CMAKE_PROJECT_NAME} NUCLEO-F411RE STM32F411RE)
