added QEMU stuff and switched to new modules version

--- a/Software/Try02CMake/blinky/CMakeLists.txt
+++ b/Software/Try02CMake/blinky/CMakeLists.txt
@@ -4,6 +4,7 @@ message(STATUS "Configuring project ${PROJECT_NAME}")
 
 project(${PROJECT_NAME} C ASM)
 cmake_minimum_required(VERSION 3.1)
+#set(CMAKE_VERBOSE_MAKEFILE On)
 
 # check if we have a local cmake include file and include it if we do
 # this is useful for setting our python location or st-flash as an alternative to
@@ -14,37 +15,13 @@ set(BAUDRATE 115200)
 set(OOCD openocd)
 set(OOCD_FILE board/st_nucleo_f4.cfg)
 set(STFLASH /home/ppkt/usr/bin/st-flash)
+set(QEMU "C:/Toolchain/ARM/GNU MCU Eclipse/QEMU/bin/qemu-system-gnuarmeclipse.exe")
 if (EXISTS ${CMAKE_SOURCE_DIR}/local.cmake)
     message(STATUS "Using local.cmake")
     include(${CMAKE_SOURCE_DIR}/local.cmake)
 endif ()
 
-macro(do_size size_target)
-    add_custom_command(TARGET ${size_target}.elf POST_BUILD
-            COMMAND ${SIZE} --format=berkeley "$<TARGET_FILE:${size_target}.elf>"
-            COMMENT "Invoking: Cross ARM GNU Print Size")
-endmacro(do_size)
-
-macro(do_objcopy objcopy_target type)
-    set(do_objcopy_cmd binary)
-    set(do_objcopy_ext bin)
-
-    if ("${type}" STREQUAL "srec")
-        set(do_objcopy_cmd srec)
-        set(do_objcopy_ext srec)
-    endif ()
-
-    if ("${type}" STREQUAL "hex")
-        set(do_objcopy_cmd ihex)
-        set(do_objcopy_ext hex)
-    endif ()
-
-    add_custom_target(${objcopy_target}.${do_objcopy_ext} ALL
-            ${OBJCOPY} -O${do_objcopy_cmd} ${objcopy_target}.elf ${objcopy_target}.${do_objcopy_ext}
-            DEPENDS ${objcopy_target}.elf
-            COMMENT "Invoking: Cross ARM GNU OBJCOPY ${objcopy_target} to ${do_objcopy_cmd}")
-endmacro(do_objcopy)
-
+include(../CMake/Arm.cmake)
 
 set(LIBOPENCM3_DIR ${CMAKE_SOURCE_DIR}/../libopencm3)
 
@@ -164,35 +141,7 @@ do_objcopy(${CMAKE_PROJECT_NAME} srec)
 do_objcopy(${CMAKE_PROJECT_NAME} hex)
 do_size(${CMAKE_PROJECT_NAME})
 
-# see E:\Projects\Elektronik\Arduino\!Templates\CMake\Arduino-Uno-CMake-Template\cmake\Arduino.cmake to macro-fy aboves
-# do_objcopy and do_size.
-add_custom_target(flash
-        ${OOCD} -f ${OOCD_FILE} -c "program ${CMAKE_PROJECT_NAME}.elf verify reset exit"
-        DEPENDS ${CMAKE_PROJECT_NAME}.elf
-        COMMENT "Invoking: OpenOCD flash with ${CMAKE_PROJECT_NAME}.elf")
-
-add_custom_target(monitor # Start serial monitor.
-        ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
-        COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
-add_custom_target(fmonitor # Flash target and start serial monitor.
-        ${PYTHON} -m serial.tools.miniterm --raw --eol CRLF --encoding ascii ${PORT} ${BAUDRATE}
-        DEPENDS flash
-        COMMENT "Invoking: miniterm on port ${PORT}. Exit with CTRL+'+'")
-
-
-add_custom_target(upload # Flash target via 'st-flash'.
-        stat -c %s ${CMAKE_PROJECT_NAME}.bin &&
-        ${STFLASH} --reset write ${CMAKE_PROJECT_NAME}.bin 0x08000000
-        DEPENDS ${CMAKE_PROJECT_NAME}.bin)
-
-add_custom_target(listing # Assembler listing
-        ${OBJDUMP} -S "${CMAKE_PROJECT_NAME}.elf" > ${CMAKE_PROJECT_NAME}.lst
-        DEPENDS ${CMAKE_PROJECT_NAME}.elf
-        COMMENT "Creating assembly listing of '${CMAKE_PROJECT_NAME}.elf'")
-
-add_custom_target(map # Map file with size information
-        COMMAND ${OBJDUMP} -t "${CMAKE_PROJECT_NAME}.elf" > ${CMAKE_PROJECT_NAME}.map
-        COMMAND ${SIZE} --format=berkeley "$<TARGET_FILE:${CMAKE_PROJECT_NAME}.elf>" >> ${CMAKE_PROJECT_NAME}.map
-        DEPENDS ${CMAKE_PROJECT_NAME}.elf
-        COMMENT "Creating assembly listing of '${CMAKE_PROJECT_NAME}.elf'")
-
+add_flash_target(${CMAKE_PROJECT_NAME})
+add_monitor_targets()
+add_inspection_targets(${CMAKE_PROJECT_NAME})
+add_emulation_target(${CMAKE_PROJECT_NAME} NUCLEO-F411RE STM32F411RE)
