--- a/Software/Try02CMakeCpp/blinkyCpp/CMakeLists.txt
+++ b/Software/Try02CMakeCpp/blinkyCpp/CMakeLists.txt
@@ -137,6 +137,7 @@ include_directories(
 add_custom_target(libopencm3 make WORKING_DIRECTORY ${LIBOPENCM3_DIR})
 link_directories(${LIBOPENCM3_DIR}/lib)
 
+# Note ${CMAKE_PROJECT_NAME} is the top-level one. Use ${PROJECT_NAME} like above for the local name.
 add_executable(${CMAKE_PROJECT_NAME}.elf ${SOURCES})
 target_link_libraries(${CMAKE_PROJECT_NAME}.elf opencm3_stm32f4)
 do_objcopy(${CMAKE_PROJECT_NAME} bin)
