--- a/Software/Try02CMake/blinky/local.cmake.example
+++ b/Software/Try02CMake/blinky/local.cmake.example
@@ -14,3 +14,6 @@ set(OOCD_FILE board/st_nucleo_f4.cfg)
 
 # Path to st-flash utility. Used by target 'upload'.
 set(STFLASH /home/ppkt/usr/bin/st-flash)
+
+# Path to QEMU Arm Emulator
+set(QEMU "C:/Toolchain/ARM/GNU MCU Eclipse/QEMU/bin/qemu-system-gnuarmeclipse.exe")
