provide different settings for C and C++, incorporate "project_warnings" and "project_options" in project

--- a/Software/Try02CMake/blinky/CMakeLists.txt
+++ b/Software/Try02CMake/blinky/CMakeLists.txt
@@ -6,6 +6,41 @@ project(${PROJECT_NAME} C ASM)
 cmake_minimum_required(VERSION 3.1)
 #set(CMAKE_VERBOSE_MAKEFILE On)
 
+# included CMake scripts
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake")
+include(versioning)
+include(helpers)
+include(StandardProjectSettings)
+
+# # ************************************************************************* # #
+# as of https://github.com/lefticus/cpp_starter_project
+# Link this 'library' to set the c++ standard / compile-time options requested
+add_library(project_options INTERFACE)
+target_compile_features(project_options INTERFACE c_std_99)
+if (CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
+    option(ENABLE_BUILD_WITH_TIME_TRACE "Enable -ftime-trace to generate time tracing .json files on clang" OFF)
+    if (ENABLE_BUILD_WITH_TIME_TRACE)
+        add_compile_definitions(project_options INTERFACE -ftime-trace)
+    endif ()
+endif ()
+
+# Link this 'library' to use the warnings specified in CompilerWarnings.cmake
+add_library(project_warnings INTERFACE)
+# standard compiler warnings
+include(CompilerWarnings)
+set_project_warnings(project_warnings)
+
+# sanitizer options if supported by compiler
+include(Sanitizers)
+enable_sanitizers(project_options)
+
+# allow for static analysis options
+include(StaticAnalyzers)
+
+# enable doxygen
+include(Doxygen)
+enable_doxygen()
+
 # check if we have a local cmake include file and include it if we do
 # this is useful for setting our python location or st-flash as an alternative to
 # environment variables
@@ -21,7 +56,7 @@ if (EXISTS ${CMAKE_SOURCE_DIR}/local.cmake)
     include(${CMAKE_SOURCE_DIR}/local.cmake)
 endif ()
 
-include(../CMake/Arm.cmake)
+include(Arm)
 
 set(LIBOPENCM3_DIR ${CMAKE_SOURCE_DIR}/../libopencm3)
 
@@ -135,7 +170,10 @@ link_directories(${LIBOPENCM3_DIR}/lib)
 
 # Note ${CMAKE_PROJECT_NAME} is the top-level one. Use ${PROJECT_NAME} like above for the local name.
 add_executable(${CMAKE_PROJECT_NAME}.elf ${SOURCES})
-target_link_libraries(${CMAKE_PROJECT_NAME}.elf opencm3_stm32f4)
+target_link_libraries(${CMAKE_PROJECT_NAME}.elf
+        project_warnings project_options
+        opencm3_stm32f4
+        )
 do_objcopy(${CMAKE_PROJECT_NAME} bin)
 do_objcopy(${CMAKE_PROJECT_NAME} srec)
 do_objcopy(${CMAKE_PROJECT_NAME} hex)
