real bullshit mbed stuff. I HATE YOU

--- a/Software/Try04PlatformIO_USB/platformio.ini
+++ b/Software/Try04PlatformIO_USB/platformio.ini
@@ -21,4 +21,6 @@ build_flags = -std=c++17 -Os -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ; -flto
 ;extra_scripts = config/linker_flags_newlib-nano.py
 lib_deps =
-     Adafruit_RTCLib
+     ;Adafruit_RTCLib
+     ;USBDevice
+     ;USBFileSystem
