--- a/Software/Try04PlatformIO_USB/platformio.ini
+++ b/Software/Try04PlatformIO_USB/platformio.ini
@@ -9,17 +9,17 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nucleo_f401re]
-;platform = ststm32
-platform = nxplpc
+platform = ststm32
+;platform = nxplpc
 framework = mbed
-board = lpc1768
-;board = nucleo_f401re
+;board = lpc1768
+board = nucleo_f401re
 ;board = bluepill_f103c8_128k
 ;build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ; see https://bintray.com/platformio/dl-packages/toolchain-gccarmnoneeabi
 platform_packages = toolchain-gccarmnoneeabi@>1.80201.190213
-build_flags = -std=c++17 -Os
-;build_flags = -std=c++17 -Os -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+;build_flags = -std=c++17 -Os
+build_flags = -std=c++17 -Os -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ;build_flags = -std=c++17 -Os -D PIO_FRAMEWORK_MBED_RTOS_PRESENT -D PIO_FRAMEWORK_MBED_EVENTS_PRESENT -D PIO_FRAMEWORK_MBED_FILESYSTEM_PRESENT
 ; -flto
 ;extra_scripts = config/linker_flags_newlib-nano.py
