works for nucleo_f103rb

--- a/Software/Try04PlatformIO_USB/platformio.ini
+++ b/Software/Try04PlatformIO_USB/platformio.ini
@@ -13,7 +13,9 @@ platform = ststm32
 ;platform = nxplpc
 framework = mbed
 ;board = lpc1768
+;board = disco_f072rb
 board = nucleo_f401re
+;board = nucleo_f103rb
 ;board = bluepill_f103c8_128k
 ;build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 ; see https://bintray.com/platformio/dl-packages/toolchain-gccarmnoneeabi
